Bug 118581 - Certificate issuer displayed wrongly (for X.509 certs)
Summary: Certificate issuer displayed wrongly (for X.509 certs)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Digital-Signature-Lines
  Show dependency treegraph
 
Reported: 2018-07-06 13:48 UTC by Samuel Mehrbrodt
Modified: 2018-11-13 07:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
signature line (12.10 KB, image/png)
2018-07-06 13:48 UTC, Samuel Mehrbrodt
Details
sign signature line dialog (26.43 KB, image/png)
2018-07-06 13:48 UTC, Samuel Mehrbrodt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2018-07-06 13:48:06 UTC
Created attachment 143355 [details]
signature line

See attached screenshots.
Comment 1 Samuel Mehrbrodt 2018-07-06 13:48:29 UTC
Created attachment 143356 [details]
sign signature line dialog
Comment 2 Samuel Mehrbrodt 2018-07-06 13:49:19 UTC
Instead of "E=support@..." just the issuer name should be displayed.
Comment 3 Xisco Faulí 2018-07-11 12:13:05 UTC
Moving to NEW
Comment 4 Commit Notification 2018-11-12 13:52:51 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/9c5d3e5c59a9d0ffcb5fd99f5d4c98b0f6b5560e%5E%21

tdf#118581 Correctly display issuer name in signature line

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2018-11-13 07:04:18 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/b7d0b49f5708b55e24aabb719e26ce5ec8628161%5E%21

Related tdf#118581 Use subject name, not issuer name for signature line

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.