Related tdf#118581 Use subject name, not issuer name for signature line

And map the gpg user also the the subject name

Change-Id: I1db7b93b6bfc82304924d6ef90db18ff4f97e13c